--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url('assets/back_circle.jpg');
+  background-image: url('assets/back_circle.png');
   background-size: cover;
   background-position: center;
   border-radius: 50%;
@@ -81,7 +81,7 @@ header {
   bottom: -10px;
   left: 50%;
   transform: translateX(-50%);
-  background-image: url('assets/label_bg.jpg');
+  background-image: url('assets/label_bg.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
